# vscode-cmake-tools-helper

./: 1.build.sh  CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json
src/: extension.ts
src/test/: extension.test.ts
src/test/sandbox/: CMakeLists.txt  CMakePresets.json  sample.map
